fixed spacing issue in contact layout. added min-height to keep elements from squishing together

--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -3,6 +3,7 @@
 =============================================================================*/
 
 .contact {
+	min-height: 500px;
 	background: url('../img/apple-devices.png') no-repeat center center /
 		cover;
 	grid-column: full-start / full-end;
